--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,3 +1,4 @@
+
 @include media-md {
     .menu-btn {
         visibility: hidden;
@@ -40,6 +41,7 @@
     .contact_list {
         grid-template-columns: repeat(2, 1fr);
     }
+
     
 }
 
@@ -58,6 +60,12 @@
 @include media-xl {
     .projects_bio_image {
         height: 50vh;
+    }
+}
+
+@include media-sm {
+    .home_name {
+        font-size: 3rem;
     }
 }
 
