--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,10 @@
-@import "./cofig";
-@import "./home";
-@import "./menu";
-@import "./about";
-@import "./projects";
-@import "./contact";
-@import "./responsive";
+@import "cofig";
+@import "home";
+@import "menu";
+@import "about";
+@import "projects";
+@import "contact";
+@import "responsive";
 
 body{
     background: $primary-color;
@@ -15,7 +15,7 @@ body{
 }
 
 h1, h2, h3 {
-    font-weight: 400;
+    font-weight: 500;
 }
 
 a {
@@ -26,6 +26,26 @@ a {
 .text-secondary{
     color: $secondary-color;
 }
+
+.preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #fff;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    visibility: visible;
+    z-index: 999;
+    @include transition-ease;
+  }
+
+  .hide-preloader {
+    z-index: -2000;
+    visibility: hidden;
+  }
 
 header {
     position: fixed;
@@ -67,3 +87,12 @@ footer {
 }
 
 
+@media screen and (max-width: 450px) {
+    main .social-icons {
+        position: initial;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            margin-top: 15px;
+    }
+}
